# gpu-sensor-replay-runtime

./: CMakeLists.txt  README.md  main.py  requirements.txt
docs/: architecture.md
include/gpu_runtime/: fusion.hpp  inference.hpp  io.hpp  replay.hpp  sync.hpp  threadsafe_queue.hpp  types.hpp
outputs/: summary.json  timeline.jsonl
outputs2/: summary.json  timeline.jsonl
sample_data/: camera_stream.csv  imu_stream.csv
sample_data/camera_frames/: frame_0000.ppm  frame_0001.ppm  frame_0005.ppm  frame_0006.ppm  frame_0008.ppm  frame_0009.ppm  frame_0010.ppm  frame_0011.ppm  frame_0012.ppm  frame_0013.ppm  frame_0014.ppm  frame_0015.ppm  frame_0016.ppm  frame_0017.ppm  frame_0020.ppm  frame_0021.ppm  frame_0022.ppm  frame_0025.ppm  frame_0027.ppm  frame_0030.ppm  frame_0031.ppm  frame_0033.ppm  frame_0035.ppm  frame_0036.ppm  frame_0037.ppm  frame_0038.ppm  frame_0039.ppm  frame_0040.ppm  frame_0041.ppm  frame_0042.ppm  frame_0043.ppm  frame_0044.ppm  frame_0046.ppm  frame_0047.ppm  frame_0050.ppm  frame_0052.ppm  frame_0053.ppm  frame_0054.ppm  frame_0055.ppm  frame_0061.ppm  (+14 more)
src/: data_generator.cpp  fusion.cpp  inference_cpu.cpp  inference_cuda.cu  loader.cpp  main.cpp  runtime.cpp
src/gpu_sensor_runtime/: runtime.py  types.py
src/gpu_sensor_runtime/data/: generate_sample_data.py
src/gpu_sensor_runtime/fusion/: fuser.py
src/gpu_sensor_runtime/inference/: backends.py
src/gpu_sensor_runtime/observability/: metrics.py
src/gpu_sensor_runtime/replay/: loaders.py  synchronizer.py
tests/: test_fusion.py  test_synchronizer.py
